--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45200,6 +45200,7 @@ server=/hzqiuxue.com/114.114.114.114
 server=/hzqj.com/114.114.114.114
 server=/hzqjdz.net/114.114.114.114
 server=/hzqlpt.com/114.114.114.114
+server=/hzqszl.com/114.114.114.114
 server=/hzqx.com/114.114.114.114
 server=/hzqxbg.com/114.114.114.114
 server=/hzr1.com/114.114.114.114
