--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85565,6 +85565,7 @@ server=/veryark.com/114.114.114.114
 server=/verybeaut.com/114.114.114.114
 server=/verycd.com/114.114.114.114
 server=/verycdn.net/114.114.114.114
+server=/verychem.com/114.114.114.114
 server=/verydg.com/114.114.114.114
 server=/verydns.net/114.114.114.114
 server=/verydoc.net/114.114.114.114
