--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91571,6 +91571,7 @@ server=/xiaomlove.com/114.114.114.114
 server=/xiaomor.com/114.114.114.114
 server=/xiaomoyao.com/114.114.114.114
 server=/xiaomuji.info/114.114.114.114
+server=/xiaomuzhi.com/114.114.114.114
 server=/xiaomy.net/114.114.114.114
 server=/xiaomyc.com/114.114.114.114
 server=/xiaonaodai.com/114.114.114.114
