--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22446,6 +22446,7 @@ server=/cnseeq.com/114.114.114.114
 server=/cnsesan.com/114.114.114.114
 server=/cnsfk.com/114.114.114.114
 server=/cnshexinji.com/114.114.114.114
+server=/cnshiri.com/114.114.114.114
 server=/cnside.com/114.114.114.114
 server=/cnsikao.com/114.114.114.114
 server=/cnsilkworm.com/114.114.114.114
