--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74729,6 +74729,7 @@ server=/sfyyqc.com/114.114.114.114
 server=/sfyzf.com/114.114.114.114
 server=/sfzj123.com/114.114.114.114
 server=/sg-che.com/114.114.114.114
+server=/sg-gemsy.com/114.114.114.114
 server=/sg-micro.com/114.114.114.114
 server=/sg.work/114.114.114.114
 server=/sg169.com/114.114.114.114
