--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41933,6 +41933,7 @@ server=/hisense-syxs.com/114.114.114.114
 server=/hisense.com/114.114.114.114
 server=/hisensehitachi.com/114.114.114.114
 server=/hisensekf.com/114.114.114.114
+server=/hisern.com/114.114.114.114
 server=/hishouhui.com/114.114.114.114
 server=/hisilicon.com/114.114.114.114
 server=/hisiphp.com/114.114.114.114
