--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91471,6 +91471,7 @@ server=/xiamo.cc/114.114.114.114
 server=/xiamo.fun/114.114.114.114
 server=/xiamoyun.com/114.114.114.114
 server=/xiamp4.com/114.114.114.114
+server=/xian-feng.com/114.114.114.114
 server=/xian-tourism.com/114.114.114.114
 server=/xian-yao.com/114.114.114.114
 server=/xian.com/114.114.114.114
