--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102212,6 +102212,7 @@ server=/zj93zp.com/114.114.114.114
 server=/zj96596.com/114.114.114.114
 server=/zjabank.com/114.114.114.114
 server=/zjaf.net/114.114.114.114
+server=/zjafl.com/114.114.114.114
 server=/zjags.com/114.114.114.114
 server=/zjai.xyz/114.114.114.114
 server=/zjaikang.com/114.114.114.114
