--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102318,6 +102318,7 @@ server=/zjian.net/114.114.114.114
 server=/zjib0.icu/114.114.114.114
 server=/zjibao.com/114.114.114.114
 server=/zjiecode.com/114.114.114.114
+server=/zjiekai.com/114.114.114.114
 server=/zjiis.com/114.114.114.114
 server=/zjim.org/114.114.114.114
 server=/zjipai.com/114.114.114.114
