--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53852,6 +53852,7 @@ server=/koalareading.com/114.114.114.114
 server=/koalasolo.com/114.114.114.114
 server=/koba8.com/114.114.114.114
 server=/kobeandkdshoes.com/114.114.114.114
+server=/kobelco-zh.com/114.114.114.114
 server=/kobox.tv/114.114.114.114
 server=/kocla.com/114.114.114.114
 server=/kodcloud.com/114.114.114.114
