--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57324,6 +57324,7 @@ server=/lkcash.com/114.114.114.114
 server=/lkcgyl.com/114.114.114.114
 server=/lkchemical.com/114.114.114.114
 server=/lkcoffee.com/114.114.114.114
+server=/lkfan.com/114.114.114.114
 server=/lkg888.com/114.114.114.114
 server=/lkgame.com/114.114.114.114
 server=/lkgk.net/114.114.114.114
