--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -474,6 +474,7 @@ server=/0574nbjg.com/114.114.114.114
 server=/0575.host/114.114.114.114
 server=/057555.com/114.114.114.114
 server=/0575bbs.com/114.114.114.114
+server=/0575jb.com/114.114.114.114
 server=/0575life.com/114.114.114.114
 server=/0575qs.com/114.114.114.114
 server=/0577-it.com/114.114.114.114
