--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22017,6 +22017,7 @@ server=/cndaizi.com/114.114.114.114
 server=/cndao.com/114.114.114.114
 server=/cndata.com/114.114.114.114
 server=/cndatacom.com/114.114.114.114
+server=/cndbl.com/114.114.114.114
 server=/cndc-pl.com/114.114.114.114
 server=/cndds.com/114.114.114.114
 server=/cndesign.com/114.114.114.114
