--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23833,6 +23833,7 @@ server=/csytv.com/114.114.114.114
 server=/csyunkj.com/114.114.114.114
 server=/csyuwei.com/114.114.114.114
 server=/csyuyism.com/114.114.114.114
+server=/cszec.com/114.114.114.114
 server=/cszhonghui.com/114.114.114.114
 server=/cszit.com/114.114.114.114
 server=/cszn120.com/114.114.114.114
