--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66406,6 +66406,7 @@ server=/orientalgas.com/114.114.114.114
 server=/orientalpearltower.com/114.114.114.114
 server=/orientalwisdom.com/114.114.114.114
 server=/orientcasa.com/114.114.114.114
+server=/orientengg.com/114.114.114.114
 server=/orientfoods.net/114.114.114.114
 server=/orientgolf.com/114.114.114.114
 server=/orientpc.com/114.114.114.114
