--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98838,6 +98838,7 @@ server=/yungongchang.com/114.114.114.114
 server=/yungou618.com/114.114.114.114
 server=/yungouos.com/114.114.114.114
 server=/yungousj.net/114.114.114.114
+server=/yungpu.com/114.114.114.114
 server=/yunguajibao.com/114.114.114.114
 server=/yungujia.com/114.114.114.114
 server=/yunhaicangshu.com/114.114.114.114
