--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102301,6 +102301,7 @@ server=/zjhbdlkj.com/114.114.114.114
 server=/zjhcbank.com/114.114.114.114
 server=/zjhdcs.com/114.114.114.114
 server=/zjhejiang.com/114.114.114.114
+server=/zjhfxcl.com/114.114.114.114
 server=/zjhi.net/114.114.114.114
 server=/zjhkele.com/114.114.114.114
 server=/zjhlst.com/114.114.114.114
