--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102429,6 +102429,7 @@ server=/zjrugao.com/114.114.114.114
 server=/zjsairport.com/114.114.114.114
 server=/zjsaisi.com/114.114.114.114
 server=/zjsanma.com/114.114.114.114
+server=/zjsbigdata.com/114.114.114.114
 server=/zjscdb.com/114.114.114.114
 server=/zjscs.com/114.114.114.114
 server=/zjsdjlkj.com/114.114.114.114
