--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39881,6 +39881,7 @@ server=/haiweili.com/114.114.114.114
 server=/haiwell.com/114.114.114.114
 server=/haiwen-law.com/114.114.114.114
 server=/haiwenky.com/114.114.114.114
+server=/haiwu.com/114.114.114.114
 server=/haixiachina.com/114.114.114.114
 server=/haixiahuagong.com/114.114.114.114
 server=/haixianlai.net/114.114.114.114
