--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63814,6 +63814,7 @@ server=/neat-reader.com/114.114.114.114
 server=/neatifyapp.com/114.114.114.114
 server=/nebulogy.com/114.114.114.114
 server=/neccsh.com/114.114.114.114
+server=/nedfon.co/114.114.114.114
 server=/nedigitals.com/114.114.114.114
 server=/needexam.com/114.114.114.114
 server=/neefood.com/114.114.114.114
