--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81416,6 +81416,7 @@ server=/taizibao.com/114.114.114.114
 server=/tajd.net/114.114.114.114
 server=/tajdny.com/114.114.114.114
 server=/takfat.com/114.114.114.114
+server=/takstar.com/114.114.114.114
 server=/takumi-cnc.com/114.114.114.114
 server=/takungpao.com/114.114.114.114
 server=/takusogroup.com/114.114.114.114
