--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89535,6 +89535,7 @@ server=/wintech-nano.com/114.114.114.114
 server=/winterchen.com/114.114.114.114
 server=/wintimechina.com/114.114.114.114
 server=/wintodoor.com/114.114.114.114
+server=/wintom.net/114.114.114.114
 server=/wintooo.com/114.114.114.114
 server=/wintopedu.com/114.114.114.114
 server=/wintrueholding.com/114.114.114.114
