--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33980,6 +33980,7 @@ server=/gdmschina.com/114.114.114.114
 server=/gdmuah.com/114.114.114.114
 server=/gdmusah.com/114.114.114.114
 server=/gdmuseum.com/114.114.114.114
+server=/gdmzh.com/114.114.114.114
 server=/gdmztv.com/114.114.114.114
 server=/gdmzw.com/114.114.114.114
 server=/gdnd2016.com/114.114.114.114
