--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33926,6 +33926,7 @@ server=/gdhcsh.com/114.114.114.114
 server=/gdhdbxg.com/114.114.114.114
 server=/gdhfny.com/114.114.114.114
 server=/gdhhgroup.com/114.114.114.114
+server=/gdhhjs.net/114.114.114.114
 server=/gdhjzs.com/114.114.114.114
 server=/gdhsbid.com/114.114.114.114
 server=/gdhtcm.com/114.114.114.114
