--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22217,6 +22217,7 @@ server=/cngaoxiu.com/114.114.114.114
 server=/cngb.org/114.114.114.114
 server=/cngba.com/114.114.114.114
 server=/cngbdl.com/114.114.114.114
+server=/cngdhl.com/114.114.114.114
 server=/cngin.com/114.114.114.114
 server=/cngjtx.com/114.114.114.114
 server=/cngold.org/114.114.114.114
