--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74023,6 +74023,7 @@ server=/sc-001.net/114.114.114.114
 server=/sc-aaa.com/114.114.114.114
 server=/sc-admc.com/114.114.114.114
 server=/sc-jiaoyu.com/114.114.114.114
+server=/sc-pd.com/114.114.114.114
 server=/sc-tianyu.com/114.114.114.114
 server=/sc-xngs.com/114.114.114.114
 server=/sc.gg/114.114.114.114
