--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33820,6 +33820,7 @@ server=/gcyy08.com/114.114.114.114
 server=/gczyg.com/114.114.114.114
 server=/gd-chenxing.com/114.114.114.114
 server=/gd-dl.com/114.114.114.114
+server=/gd-haijing.com/114.114.114.114
 server=/gd-hskj.com/114.114.114.114
 server=/gd-hstech.com/114.114.114.114
 server=/gd-huadi.com/114.114.114.114
