--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23731,6 +23731,7 @@ server=/crystalcg.com/114.114.114.114
 server=/crystaledu.com/114.114.114.114
 server=/cryuantafund.com/114.114.114.114
 server=/cs-air.com/114.114.114.114
+server=/cs-airport.com/114.114.114.114
 server=/cs-cjl.com/114.114.114.114
 server=/cs-pos.com/114.114.114.114
 server=/cs-show.com/114.114.114.114
