--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33854,6 +33854,7 @@ server=/gdajk.com/114.114.114.114
 server=/gdapi.net/114.114.114.114
 server=/gdatacube.net/114.114.114.114
 server=/gdatc.net/114.114.114.114
+server=/gdbaishun.net/114.114.114.114
 server=/gdbbk.com/114.114.114.114
 server=/gdbenke.com/114.114.114.114
 server=/gdbhnk.com/114.114.114.114
