--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34017,6 +34017,7 @@ server=/gdrfyy.com/114.114.114.114
 server=/gdroro.com/114.114.114.114
 server=/gdrqj.org/114.114.114.114
 server=/gdruien.com/114.114.114.114
+server=/gdruisheng.com/114.114.114.114
 server=/gds-huanbaogroup.com/114.114.114.114
 server=/gds-services.com/114.114.114.114
 server=/gdsa.com/114.114.114.114
