--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34041,6 +34041,7 @@ server=/gdsports.net/114.114.114.114
 server=/gdsrcw.com/114.114.114.114
 server=/gdsstl.com/114.114.114.114
 server=/gdstc.group/114.114.114.114
+server=/gdstie.com/114.114.114.114
 server=/gdstlab.com/114.114.114.114
 server=/gdsugar.com/114.114.114.114
 server=/gdsuxie.com/114.114.114.114
