--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49687,6 +49687,7 @@ server=/jianxinyun.com/114.114.114.114
 server=/jianxiyasi.com/114.114.114.114
 server=/jianxuzuo.com/114.114.114.114
 server=/jianyanjia.com/114.114.114.114
+server=/jianyechina.com/114.114.114.114
 server=/jianyewx.com/114.114.114.114
 server=/jianying.com/114.114.114.114
 server=/jianyixinli.com/114.114.114.114
