--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53652,6 +53652,7 @@ server=/kernel.cc/114.114.114.114
 server=/kernelnote.com/114.114.114.114
 server=/kerneltravel.net/114.114.114.114
 server=/kerntech-asp.com/114.114.114.114
+server=/kerric-china.com/114.114.114.114
 server=/keruibell.com/114.114.114.114
 server=/keruiiai.com/114.114.114.114
 server=/keruilai.com/114.114.114.114
