--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83257,6 +83257,7 @@ server=/tk163.com/114.114.114.114
 server=/tk233.xyz/114.114.114.114
 server=/tk315.com/114.114.114.114
 server=/tkas2019.com/114.114.114.114
+server=/tkchina.com/114.114.114.114
 server=/tkckjr.com/114.114.114.114
 server=/tkcn.cc/114.114.114.114
 server=/tkd-suzhou.com/114.114.114.114
