--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95026,6 +95026,7 @@ server=/xuweidj.com/114.114.114.114
 server=/xuwenliang.com/114.114.114.114
 server=/xuxian.com/114.114.114.114
 server=/xuxian.me/114.114.114.114
+server=/xuxiang.com/114.114.114.114
 server=/xuxueli.com/114.114.114.114
 server=/xuxusheng.com/114.114.114.114
 server=/xuyalipin.com/114.114.114.114
