--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22509,6 +22509,7 @@ server=/cnqiuyu.com/114.114.114.114
 server=/cnqjw.com/114.114.114.114
 server=/cnqr.org/114.114.114.114
 server=/cnquanjing.com/114.114.114.114
+server=/cnqwt.com/114.114.114.114
 server=/cnradio.com/114.114.114.114
 server=/cnraksmart.com/114.114.114.114
 server=/cnrancher.com/114.114.114.114
