--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34019,6 +34019,7 @@ server=/gdroro.com/114.114.114.114
 server=/gdrqj.org/114.114.114.114
 server=/gdruien.com/114.114.114.114
 server=/gdruisheng.com/114.114.114.114
+server=/gdrxzx.com/114.114.114.114
 server=/gds-huanbaogroup.com/114.114.114.114
 server=/gds-services.com/114.114.114.114
 server=/gdsa.com/114.114.114.114
