--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41540,6 +41540,7 @@ server=/hengdianworld.com/114.114.114.114
 server=/hengdulaw.com/114.114.114.114
 server=/hengfujz.com/114.114.114.114
 server=/henggufood.com/114.114.114.114
+server=/henghe-group.com/114.114.114.114
 server=/henghe666.com/114.114.114.114
 server=/henghongjixie.com/114.114.114.114
 server=/henghuicjcn.com/114.114.114.114
