--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9563,6 +9563,7 @@ server=/ae256.com/114.114.114.114
 server=/ae60.com/114.114.114.114
 server=/aebiz.net/114.114.114.114
 server=/aec188.com/114.114.114.114
+server=/aecbattery.com/114.114.114.114
 server=/aecc-mall.com/114.114.114.114
 server=/aecichina.com/114.114.114.114
 server=/aecname.com/114.114.114.114
