--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22316,6 +22316,7 @@ server=/cnjccrusher.com/114.114.114.114
 server=/cnjecc.com/114.114.114.114
 server=/cnjffb.com/114.114.114.114
 server=/cnjfsilk.com/114.114.114.114
+server=/cnjiajun.com/114.114.114.114
 server=/cnjiali.com/114.114.114.114
 server=/cnjingchu.com/114.114.114.114
 server=/cnjingtong.com/114.114.114.114
