--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34135,6 +34135,7 @@ server=/gdzgjl.com/114.114.114.114
 server=/gdzgy.com/114.114.114.114
 server=/gdzhcx.com/114.114.114.114
 server=/gdzhiding.com/114.114.114.114
+server=/gdzhonghua.com/114.114.114.114
 server=/gdzhongshan.com/114.114.114.114
 server=/gdzjdl.com/114.114.114.114
 server=/gdzp.org/114.114.114.114
