--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39115,6 +39115,7 @@ server=/gzcihui.com/114.114.114.114
 server=/gzcjjs.com/114.114.114.114
 server=/gzcl999.com/114.114.114.114
 server=/gzcmer.com/114.114.114.114
+server=/gzcmjl.com/114.114.114.114
 server=/gzcn.net/114.114.114.114
 server=/gzcppa.com/114.114.114.114
 server=/gzcrdzbk.com/114.114.114.114
