--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46292,6 +46292,7 @@ server=/icoremail.net/114.114.114.114
 server=/icos8.com/114.114.114.114
 server=/icosky.com/114.114.114.114
 server=/icostapp.com/114.114.114.114
+server=/icot.com/114.114.114.114
 server=/icourse163.com/114.114.114.114
 server=/icourse163.org/114.114.114.114
 server=/icourses163.com/114.114.114.114
