--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48745,6 +48745,7 @@ server=/jaeger-hello.com/114.114.114.114
 server=/jaeosc.com/114.114.114.114
 server=/jafeney.com/114.114.114.114
 server=/jagjj.com/114.114.114.114
+server=/jaguar-guangdong.com/114.114.114.114
 server=/jaja123.com/114.114.114.114
 server=/jajgstx.com/114.114.114.114
 server=/jajjd.com/114.114.114.114
