--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68501,6 +68501,7 @@ server=/plcdn.net/114.114.114.114
 server=/plcent.com/114.114.114.114
 server=/plchinese.com/114.114.114.114
 server=/plcloud.com/114.114.114.114
+server=/plentypolymer.com/114.114.114.114
 server=/plesk-cn.com/114.114.114.114
 server=/plex2.com/114.114.114.114
 server=/plexpt.com/114.114.114.114
