--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101120,6 +101120,7 @@ server=/zgzca.com/114.114.114.114
 server=/zgzcw.com/114.114.114.114
 server=/zgzcwy.com/114.114.114.114
 server=/zgzhaoming.net/114.114.114.114
+server=/zgzhmz.com/114.114.114.114
 server=/zgzjzzs.com/114.114.114.114
 server=/zgzkw.com/114.114.114.114
 server=/zgznh.com/114.114.114.114
