--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20481,6 +20481,7 @@ server=/chinauos.com/114.114.114.114
 server=/chinauos.net/114.114.114.114
 server=/chinaups.com/114.114.114.114
 server=/chinaus.com/114.114.114.114
+server=/chinauwei.com/114.114.114.114
 server=/chinavalin.com/114.114.114.114
 server=/chinavcpe.com/114.114.114.114
 server=/chinavfx.net/114.114.114.114
