--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23629,6 +23629,7 @@ server=/cre021.com/114.114.114.114
 server=/cread.com/114.114.114.114
 server=/creatby.com/114.114.114.114
 server=/createcdigital.com/114.114.114.114
+server=/createw.com/114.114.114.114
 server=/createwf.com/114.114.114.114
 server=/creati5.com/114.114.114.114
 server=/creationventure.com/114.114.114.114
