--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18733,6 +18733,7 @@ server=/centrostuditaliani.com/114.114.114.114
 server=/century21cn.com/114.114.114.114
 server=/centurycreation.com/114.114.114.114
 server=/centuryenglish.com/114.114.114.114
+server=/centurystar.net/114.114.114.114
 server=/centurytrip.com/114.114.114.114
 server=/cenvan.net/114.114.114.114
 server=/cenvandns.com/114.114.114.114
