--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21205,6 +21205,7 @@ server=/cistds.org/114.114.114.114
 server=/cisuntech.com/114.114.114.114
 server=/cit168.com/114.114.114.114
 server=/citahub.com/114.114.114.114
+server=/citaq.com/114.114.114.114
 server=/citeaexample.com/114.114.114.114
 server=/citegalleries.com/114.114.114.114
 server=/citexpo.org/114.114.114.114
