--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22059,6 +22059,7 @@ server=/cncdh2.com/114.114.114.114
 server=/cncdn.com/114.114.114.114
 server=/cncdnx.com/114.114.114.114
 server=/cncecci.com/114.114.114.114
+server=/cncecsci.com/114.114.114.114
 server=/cncecyc.com/114.114.114.114
 server=/cncells.net/114.114.114.114
 server=/cncgdns.net/114.114.114.114
