--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51919,6 +51919,7 @@ server=/jrzp.com/114.114.114.114
 server=/jrzyzs.com/114.114.114.114
 server=/js-aerfa.com/114.114.114.114
 server=/js-cct.com/114.114.114.114
+server=/js-exp.com/114.114.114.114
 server=/js-fangyuan.com/114.114.114.114
 server=/js-gojo.com/114.114.114.114
 server=/js-jiatai.com/114.114.114.114
