--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84547,6 +84547,7 @@ server=/travelsky.com/114.114.114.114
 server=/travelsky.net/114.114.114.114
 server=/travelwuhan.com/114.114.114.114
 server=/travelyee.com/114.114.114.114
+server=/trawind.com/114.114.114.114
 server=/trboli.com/114.114.114.114
 server=/treehousesub.com/114.114.114.114
 server=/treesir.pub/114.114.114.114
