--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58126,6 +58126,7 @@ server=/lljsq.net/114.114.114.114
 server=/lljyx.com/114.114.114.114
 server=/llksja.com/114.114.114.114
 server=/llku.com/114.114.114.114
+server=/lllcn.com/114.114.114.114
 server=/llliii.com/114.114.114.114
 server=/llllx7.com/114.114.114.114
 server=/lllomh.com/114.114.114.114
