--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23710,6 +23710,7 @@ server=/crcb966888.com/114.114.114.114
 server=/crcctc.com/114.114.114.114
 server=/crcgas.com/114.114.114.114
 server=/crchi.com/114.114.114.114
+server=/crclogistics.com/114.114.114.114
 server=/crcrfsp.com/114.114.114.114
 server=/crcsz.com/114.114.114.114
 server=/crct.com/114.114.114.114
