--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5819,6 +5819,7 @@ server=/56dr.net/114.114.114.114
 server=/56dz.com/114.114.114.114
 server=/56ggb.com/114.114.114.114
 server=/56gk.com/114.114.114.114
+server=/56home.org/114.114.114.114
 server=/56img.com/114.114.114.114
 server=/56img.net/114.114.114.114
 server=/56imgs.com/114.114.114.114
