--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21263,6 +21263,7 @@ server=/cipukj.com/114.114.114.114
 server=/cipunited.com/114.114.114.114
 server=/circday.com/114.114.114.114
 server=/circleharmonyhealth.com/114.114.114.114
+server=/circlelog.com/114.114.114.114
 server=/circuitboardchips.com/114.114.114.114
 server=/cirmall.com/114.114.114.114
 server=/cirrowings.com/114.114.114.114
