--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33057,6 +33057,7 @@ server=/fullstack.love/114.114.114.114
 server=/fulou.life/114.114.114.114
 server=/fultree.com/114.114.114.114
 server=/fulu.com/114.114.114.114
+server=/fulykong.com/114.114.114.114
 server=/fumake.com/114.114.114.114
 server=/fumi.com/114.114.114.114
 server=/fumiaoyinpin.com/114.114.114.114
