--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24040,6 +24040,7 @@ server=/csflgg.com/114.114.114.114
 server=/csfounder.com/114.114.114.114
 server=/csfreezer.com/114.114.114.114
 server=/csftyy.com/114.114.114.114
+server=/csfudu.com/114.114.114.114
 server=/csfybjy.com/114.114.114.114
 server=/csg99.com/114.114.114.114
 server=/csgasgroup.com/114.114.114.114
