--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101230,6 +101230,7 @@ server=/ywshouyou.net/114.114.114.114
 server=/ywsoftware.com/114.114.114.114
 server=/ywstsb.com/114.114.114.114
 server=/ywtd.xyz/114.114.114.114
+server=/ywtds.com/114.114.114.114
 server=/ywurl.com/114.114.114.114
 server=/ywwg.net/114.114.114.114
 server=/ywwm.net/114.114.114.114
