--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49419,6 +49419,7 @@ server=/izpec.com/114.114.114.114
 server=/izstz.com/114.114.114.114
 server=/izsvip.com/114.114.114.114
 server=/izt8.com/114.114.114.114
+server=/izto.com/114.114.114.114
 server=/iztwp.com/114.114.114.114
 server=/iztzq.com/114.114.114.114
 server=/izuche.com/114.114.114.114
