--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64853,6 +64853,7 @@ server=/neko.pub/114.114.114.114
 server=/nelkshuhe.com/114.114.114.114
 server=/nellit.info/114.114.114.114
 server=/nellit.net/114.114.114.114
+server=/nellit.xyz/114.114.114.114
 server=/nelson-textiles.com/114.114.114.114
 server=/nelumbosp.com/114.114.114.114
 server=/nengapp.com/114.114.114.114
