--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70922,6 +70922,7 @@ server=/qianbeibei.shop/114.114.114.114
 server=/qianbi360.com/114.114.114.114
 server=/qianbianapi.com/114.114.114.114
 server=/qianbianxiazai.com/114.114.114.114
+server=/qiancangwms.com/114.114.114.114
 server=/qiancha.cc/114.114.114.114
 server=/qianchenglvdong.com/114.114.114.114
 server=/qianchengriben.com/114.114.114.114
