--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84642,6 +84642,7 @@ server=/tnblog.net/114.114.114.114
 server=/tnbz.com/114.114.114.114
 server=/tnccdn.com/114.114.114.114
 server=/tnedu.com/114.114.114.114
+server=/tnettms.com/114.114.114.114
 server=/tnfn.net/114.114.114.114
 server=/tnfno.icu/114.114.114.114
 server=/tngcjx.com/114.114.114.114
