--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94765,6 +94765,7 @@ server=/xinyour.com/114.114.114.114
 server=/xinyu19.com/114.114.114.114
 server=/xinyuanclub.com/114.114.114.114
 server=/xinyuanf.com/114.114.114.114
+server=/xinyuanfin.com/114.114.114.114
 server=/xinyuanshiye.net/114.114.114.114
 server=/xinyuefei.com/114.114.114.114
 server=/xinyueseo.com/114.114.114.114
