--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96978,6 +96978,7 @@ server=/y5kfpt.com/114.114.114.114
 server=/y5news.com/114.114.114.114
 server=/y5store.com/114.114.114.114
 server=/y77.cc/114.114.114.114
+server=/y78r.com/114.114.114.114
 server=/y7ts.icu/114.114.114.114
 server=/y80s.com/114.114.114.114
 server=/y8cyx6fvyxk3hs.com/114.114.114.114
