--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100345,6 +100345,7 @@ server=/ytocargo.com/114.114.114.114
 server=/ytoexp.com/114.114.114.114
 server=/ytoexpress.com/114.114.114.114
 server=/ytoglobal.com/114.114.114.114
+server=/ytoholding.com/114.114.114.114
 server=/ytokj.com/114.114.114.114
 server=/ytop8.com/114.114.114.114
 server=/ytphq.com/114.114.114.114
