--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100350,6 +100350,7 @@ server=/ytokj.com/114.114.114.114
 server=/ytokj.net/114.114.114.114
 server=/ytoluohan.com/114.114.114.114
 server=/ytoluohan.net/114.114.114.114
+server=/ytoluohan.xin/114.114.114.114
 server=/ytop8.com/114.114.114.114
 server=/ytphq.com/114.114.114.114
 server=/ytpowder.com/114.114.114.114
