--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100473,6 +100473,7 @@ server=/yuanteng.net/114.114.114.114
 server=/yuantest.com/114.114.114.114
 server=/yuantiku.biz/114.114.114.114
 server=/yuantiku.com/114.114.114.114
+server=/yuantongyizhan.com/114.114.114.114
 server=/yuantoushuo.com/114.114.114.114
 server=/yuantutech.com/114.114.114.114
 server=/yuanu.com/114.114.114.114
