--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100492,6 +100492,7 @@ server=/yuanzhanapp.com/114.114.114.114
 server=/yuanzhexi.com/114.114.114.114
 server=/yuanzhi.com/114.114.114.114
 server=/yuanzhihao.life/114.114.114.114
+server=/yuanzhiyijiantong.com/114.114.114.114
 server=/yuanzidai.com/114.114.114.114
 server=/yuanzige.com/114.114.114.114
 server=/yuanzipower.com/114.114.114.114
