--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105608,6 +105608,7 @@ server=/ztnews.net/114.114.114.114
 server=/ztno.com/114.114.114.114
 server=/ztny188.com/114.114.114.114
 server=/zto.com/114.114.114.114
+server=/zto.net/114.114.114.114
 server=/zto56.com/114.114.114.114
 server=/ztoglobal.com/114.114.114.114
 server=/ztomember.com/114.114.114.114
