--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105610,6 +105610,7 @@ server=/ztny188.com/114.114.114.114
 server=/zto.com/114.114.114.114
 server=/zto.net/114.114.114.114
 server=/zto56.com/114.114.114.114
+server=/ztoapp.com/114.114.114.114
 server=/ztoglobal.com/114.114.114.114
 server=/ztomember.com/114.114.114.114
 server=/ztqft.com/114.114.114.114
