--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35183,6 +35183,7 @@ server=/github-zh.com/114.114.114.114
 server=/github5.com/114.114.114.114
 server=/githubim.com/114.114.114.114
 server=/githubusercontents.com/114.114.114.114
+server=/gitinn.com/114.114.114.114
 server=/gitiu.com/114.114.114.114
 server=/gitlib.com/114.114.114.114
 server=/gitlore.com/114.114.114.114
