--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15887,6 +15887,7 @@ server=/blogofmusic.com/114.114.114.114
 server=/blogqun.com/114.114.114.114
 server=/blogturn.com/114.114.114.114
 server=/blogways.net/114.114.114.114
+server=/blogwe.com/114.114.114.114
 server=/blogxuan.com/114.114.114.114
 server=/bloom-powder.com/114.114.114.114
 server=/bloomagebiotech.com/114.114.114.114
