--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93336,6 +93336,7 @@ server=/xhsd.com/114.114.114.114
 server=/xhsf.com/114.114.114.114
 server=/xhslink.com/114.114.114.114
 server=/xhslw.com/114.114.114.114
+server=/xhsmlt.com/114.114.114.114
 server=/xhsrmyy.com/114.114.114.114
 server=/xhsyqx.com/114.114.114.114
 server=/xhsyww.com/114.114.114.114
