--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73913,6 +73913,7 @@ server=/rlzki31dgypt.com/114.114.114.114
 server=/rm-static.djicdn.com/114.114.114.114
 server=/rm.run/114.114.114.114
 server=/rmb.sh/114.114.114.114
+server=/rmbbk.com/114.114.114.114
 server=/rmbrate.net/114.114.114.114
 server=/rmburl.com/114.114.114.114
 server=/rmcaribbean.com/114.114.114.114
