--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54216,6 +54216,7 @@ server=/kaoyanne.com/114.114.114.114
 server=/kaoyansiji.com/114.114.114.114
 server=/kaoyanwin.com/114.114.114.114
 server=/kaoyaya.com/114.114.114.114
+server=/kaozh.com/114.114.114.114
 server=/kaozhiye.com/114.114.114.114
 server=/kap666.com/114.114.114.114
 server=/kaquanbao.com/114.114.114.114
