--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41025,6 +41025,7 @@ server=/haoshudi.com/114.114.114.114
 server=/haoshunjia.com/114.114.114.114
 server=/haoshunjx.com/114.114.114.114
 server=/haoshuo.com/114.114.114.114
+server=/haoshuyou.net/114.114.114.114
 server=/haoshuyun.com/114.114.114.114
 server=/haositone.com/114.114.114.114
 server=/haosix.com/114.114.114.114
