--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30146,6 +30146,7 @@ server=/emtx.com/114.114.114.114
 server=/emu999.net/114.114.114.114
 server=/emuban.com/114.114.114.114
 server=/emuch.net/114.114.114.114
+server=/emuchong.com/114.114.114.114
 server=/emugif.com/114.114.114.114
 server=/emui.com/114.114.114.114
 server=/emui.tech/114.114.114.114
