--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6876,6 +6876,7 @@ server=/7080edu.com/114.114.114.114
 server=/70822.com/114.114.114.114
 server=/7089dd.com/114.114.114.114
 server=/7089gg.com/114.114.114.114
+server=/70cq.com/114.114.114.114
 server=/70dh.com/114.114.114.114
 server=/70dir.com/114.114.114.114
 server=/70e.com/114.114.114.114
