--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43900,6 +43900,7 @@ server=/hongyanhr.com/114.114.114.114
 server=/hongyanjin.com/114.114.114.114
 server=/hongyanliren.com/114.114.114.114
 server=/hongyaomall.com/114.114.114.114
+server=/hongyawang.com/114.114.114.114
 server=/hongyewangluo.com/114.114.114.114
 server=/hongyewuyang.com/114.114.114.114
 server=/hongyi5.com/114.114.114.114
