--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98286,6 +98286,7 @@ server=/yigecun.com/114.114.114.114
 server=/yigerlife.com/114.114.114.114
 server=/yigomob.com/114.114.114.114
 server=/yigongdcs.com/114.114.114.114
+server=/yigonghl.com/114.114.114.114
 server=/yigood.net/114.114.114.114
 server=/yigoonet.com/114.114.114.114
 server=/yigouu.com/114.114.114.114
