--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25285,6 +25285,7 @@ server=/daltonbio.com/114.114.114.114
 server=/dalu.net/114.114.114.114
 server=/daluma.com/114.114.114.114
 server=/daluo.com/114.114.114.114
+server=/daluom.com/114.114.114.114
 server=/daluwang.net/114.114.114.114
 server=/daluxinxi.com/114.114.114.114
 server=/dalvhe.com/114.114.114.114
