--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61235,6 +61235,7 @@ server=/mbinary.xyz/114.114.114.114
 server=/mbksh.com/114.114.114.114
 server=/mblaudio.com/114.114.114.114
 server=/mbldbb.com/114.114.114.114
+server=/mblog.club/114.114.114.114
 server=/mblu.com/114.114.114.114
 server=/mbo-china.com/114.114.114.114
 server=/mbokee.com/114.114.114.114
