--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29894,6 +29894,7 @@ server=/ehxyz.com/114.114.114.114
 server=/ei6nd.com/114.114.114.114
 server=/eia-data.com/114.114.114.114
 server=/eia543.com/114.114.114.114
+server=/eiacloud.com/114.114.114.114
 server=/eiafans.com/114.114.114.114
 server=/eiccmall.com/114.114.114.114
 server=/eickaopei.com/114.114.114.114
