--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36654,6 +36654,7 @@ server=/gtan.com/114.114.114.114
 server=/gtanhao.com/114.114.114.114
 server=/gtaos.com/114.114.114.114
 server=/gtarsc.com/114.114.114.114
+server=/gtastart.com/114.114.114.114
 server=/gtaxqh.com/114.114.114.114
 server=/gtbrowser.com/114.114.114.114
 server=/gtc-power.com/114.114.114.114
