--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59931,6 +59931,7 @@ server=/lwjl.com/114.114.114.114
 server=/lwjt.net/114.114.114.114
 server=/lwlm.com/114.114.114.114
 server=/lwlocks.com/114.114.114.114
+server=/lwlt.net/114.114.114.114
 server=/lwlzy.com/114.114.114.114
 server=/lwons.com/114.114.114.114
 server=/lwork.com/114.114.114.114
