--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13784,6 +13784,7 @@ server=/bbs-go.com/114.114.114.114
 server=/bbs0415.com/114.114.114.114
 server=/bbs0551.com/114.114.114.114
 server=/bbs1x.net/114.114.114.114
+server=/bbscloud.com/114.114.114.114
 server=/bbsds.com/114.114.114.114
 server=/bbsheji.com/114.114.114.114
 server=/bbsls.net/114.114.114.114
