--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5405,6 +5405,7 @@ server=/52bar.com/114.114.114.114
 server=/52bjd.com/114.114.114.114
 server=/52bji.com/114.114.114.114
 server=/52bjy.com/114.114.114.114
+server=/52bluetooth.com/114.114.114.114
 server=/52bus.com/114.114.114.114
 server=/52bwg.com/114.114.114.114
 server=/52by.com/114.114.114.114
