--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64138,6 +64138,7 @@ server=/mykshow.com/114.114.114.114
 server=/mykuaiji.com/114.114.114.114
 server=/mylbabao.com/114.114.114.114
 server=/mylguoji.com/114.114.114.114
+server=/mylhh.com/114.114.114.114
 server=/mylibs.org/114.114.114.114
 server=/mylightsite.com/114.114.114.114
 server=/mylike.cc/114.114.114.114
