--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67547,6 +67547,7 @@ server=/omgxy.com/114.114.114.114
 server=/omheth.com/114.114.114.114
 server=/omiaozu.com/114.114.114.114
 server=/omicsclass.com/114.114.114.114
+server=/omicshare.com/114.114.114.114
 server=/omicshare.net/114.114.114.114
 server=/omifanyi.com/114.114.114.114
 server=/ominat.com/114.114.114.114
