--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96249,6 +96249,7 @@ server=/xueersen.com/114.114.114.114
 server=/xueersi.com/114.114.114.114
 server=/xueersibook.com/114.114.114.114
 server=/xueerxing.com/114.114.114.114
+server=/xuefa.com/114.114.114.114
 server=/xuefeiji.org/114.114.114.114
 server=/xuefenxi.com/114.114.114.114
 server=/xuefo.com/114.114.114.114
