--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27138,6 +27138,7 @@ server=/diypda.com/114.114.114.114
 server=/diyring.cc/114.114.114.114
 server=/diywoju.com/114.114.114.114
 server=/diyyh.com/114.114.114.114
+server=/diyzhen.com/114.114.114.114
 server=/dizalpharma.com/114.114.114.114
 server=/dizhimei.com/114.114.114.114
 server=/dizhonghaihotel.com/114.114.114.114
