--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33713,6 +33713,7 @@ server=/fzbbk.com/114.114.114.114
 server=/fzbdcj.com/114.114.114.114
 server=/fzbidding.com/114.114.114.114
 server=/fzbingo.com/114.114.114.114
+server=/fzbm.com/114.114.114.114
 server=/fzccpit.org/114.114.114.114
 server=/fzcpos.com/114.114.114.114
 server=/fzcrg.com/114.114.114.114
