--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103657,6 +103657,7 @@ server=/zhongbenwangluo.com/114.114.114.114
 server=/zhongbingtongxin.com/114.114.114.114
 server=/zhongbowenwu.com/114.114.114.114
 server=/zhongboxinwen.com/114.114.114.114
+server=/zhongcai.com/114.114.114.114
 server=/zhongcaistream.com/114.114.114.114
 server=/zhongcaisuo.com/114.114.114.114
 server=/zhongcaitong.net/114.114.114.114
