--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6039,6 +6039,7 @@ server=/591change.com/114.114.114.114
 server=/591hx.com/114.114.114.114
 server=/591master.com/114.114.114.114
 server=/591moto.com/114.114.114.114
+server=/591moto.net/114.114.114.114
 server=/591mrzx.com/114.114.114.114
 server=/591syd.com/114.114.114.114
 server=/591wed.com/114.114.114.114
