--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63407,6 +63407,7 @@ server=/mosuzi.com/114.114.114.114
 server=/motanku.com/114.114.114.114
 server=/motel168.com/114.114.114.114
 server=/motherchildren.com/114.114.114.114
+server=/motianmi.com/114.114.114.114
 server=/motie.com/114.114.114.114
 server=/motieimg.com/114.114.114.114
 server=/motiezw.com/114.114.114.114
